--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Sharif Communications & Consulting</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>Sharif Communications & Consulting</h1>
+	<h1>Sharif Communications &amp; Consulting</h1>
 	<p>This is the marketing consulting company of Sharif</p>
-
 </body>
 </html>
