--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		<h1>Sharif Communications & Consulting</h1>
-	</title>
+	<title>Sharif Communications & Consulting</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<h1>Sharif Communications & Consulting</h1>
 	<img src="images.135H.jpg" alt="intersection" title="intersection of communication">
 	<h1>The Art of Simplicity</h1>
 	<h3>Reach your audience with clear and consistent messaging regardless of the platform</h3>
@@ -14,7 +14,7 @@
 		<li><a href="#">Content</a></li>
 		<li><a href="#">Strategy</a></li>
 	</ul>
-	<p>Contact</p>
-	<link rel="stylesheet" type="text/css" href="mailto:sharif.frink@mail.com">
+	<a href="mailto:sharif.frink@mail.com">Contact</a>
+	
 </body>
 </html>
